--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,7 @@
   <wish-input (addWish) = "items.push($event)" ></wish-input>
 
   <div>
-    <select [(ngModel)]="listFilter">
-      <option value="0">all</option>
-      <option value="1">done</option>
-      <option value="2">unfulfilled</option>
-    </select>
+    <wish-filter [(listFilter)] = "listFilter"></wish-filter>
   </div>
 
   <ng-template #test>
